# OtusPrintIp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  my_ctype.cpp  my_ctype.hpp  printIp.cpp  printIp.hpp
ctype/: my_ctype.hpp
print/: printIp.hpp
